Changing menu wrapper to be initial position to prevent overflow conflict in webkit

--- a/modules/header/navigation/navigation_mobile.scss
+++ b/modules/header/navigation/navigation_mobile.scss
@@ -40,6 +40,7 @@ $width: 70%;
 
     .menu {
       padding: 0;
+      position: initial;
 
       .mobileCategory {
         color: #fff;
